<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
     <EditText
	 android:id="@+id/et_Search "
	 android:layout_width="match_parent"
	 android:layout_height="wrap_content"
	 android:hint="@string/et_Search" />
	 
    <Button
	android:id="@+id/btn_Search"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="50dp"
	android:text= "@string/btn_Search"/>
	   
	  <TextView
	 android:id="@+id/tv_Result "
	 android:layout_width="match_parent"
	 android:layout_height="wrap_content"
	 android:hint="@string/tv_Result" />
	  
	 <Button
	 android:id="@+id/Detail_View"
	 android:layout_width="match_parent"
	 android:layout_height="wrap_content"
	 android:layout_marginTop="50dp"
	 android:text= "@string/Detail_View"
	 android:visibility="gone"/>
	
</LinearLayout>
