<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/row_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_year"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/row_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_genre"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/row_plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_plot"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/row_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row_director"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>