<?xml version="1.0" encoding="utf-8"?>


  

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity" >


    
    <Button
		android:id="@+id/add_movie_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:text= "@string/addmovie"
		android:background="#E8FAFA"/>
    
    <Button
		android:id="@+id/search_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:text= "@string/searchmovie"
		android:layout_below= "@+id/add_movie_button"
		android:background="#CDF8F8"/>
    
    <Button
		android:id="@+id/saved_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:text= "@string/savedmovie"
		android:layout_below= "@+id/search_button"
		android:background="#A9F7F7"/>
    
    <Button
		android:id="@+id/exit_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:text= "@string/exit"
		android:layout_below= "@+id/saved_button"
		android:background="#8FF2F2"/>
    

</RelativeLayout> 
